[gd_scene load_steps=7 format=3 uid="uid://b25g7x3jv62jn"]

[ext_resource type="Script" uid="uid://cfe31qd0nddyi" path="res://scripts/new_fall_platform.gd" id="1_bl256"]
[ext_resource type="Texture2D" uid="uid://b6w5rp2a3sdqa" path="res://assets/Seasonal Tilesets/5 - Misc. universal tiles/falling-platform-brown.png" id="2_bl256"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl256"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_tj51o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bl256"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100045, 0.199128, 0.299173, 0.398256),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0), Vector2(2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tj51o"]
_data = {
&"RESET": SubResource("Animation_tj51o"),
&"shake": SubResource("Animation_bl256")
}

[node name="platform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_bl256")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_bl256")

[node name="colision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bl256")
one_way_collision = true

[node name="spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tj51o")
}

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
